# pre-commit-nomad

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  lib_getopt  pyproject.toml
.github/workflows/: bumpversion.yml
hooks/: _common.sh  nomad_validate.py  nomad_validate.sh
src/hooks/: nomad_validate.py
tests/: test_nomad_validate.py
