[tool.black]
line-length = 128

[tool.poetry]
name = "pre-commit-nomad"
version = "1.0.3"
description = "pre-commit hooks"
authors = ["Mark Sharpley <mcsharpley1@gmail.com>"]
license = "MIT"
packages = [
    { include = "pre-commit-nomad" },
    { include = "pre-commit-nomad/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
commitizen = "^2.21.0"
black = "^22.1.0"
pre-commit = "^2.17.0"

[tool.poetry.scripts]
pre-commit-nomad = 'hooks.nomad_validate:main'

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.3"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
    "VERSION"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
